--- a/tests/resources/zang.test.properties
+++ b/tests/resources/zang.test.properties
@@ -1,4 +1,4 @@
 phone1=+385981631122
 phone2=+385981945644
-mp3url=http://dev.calyx.hr/~vprenner/zang.mp3
-inboundxmlurl=http://dev.calyx.hr/~vprenner/inboundxml.xml
+mp3url=https://dev.calyx.hr/~vprenner/zang.mp3
+inboundxmlurl=https://dev.calyx.hr/~vprenner/inboundxml.xml
